# c_ray_marching

./: CMakeLists.txt  ReadMe.md  bmp_writer.c  bmp_writer.h  main.c  object.h  objects.c  ray_marching.c  ray_marching.h  scene.c  scene.h  vec3.c
math_additions/: vec3.h
object/: object.h  objects.c
ray_marching/: ray_marching.c  ray_marching.h
rotation_stuff/: rotation.c
scene_meta_inf/: scene.c  scene.h
shader/: shader.c
some_structures/: linked_list.h
src/: main.c  scene_config.xml
src/IO/: xml_parser.c  xml_tree_to_scene_converter.c
src/object/: objects.c
src/rotation_stuff/: rotation.h
src/scene_meta_inf/: scene.c  scene.h
src/shader/: shader.h
src/some_structures/: linked_list.c  linked_list.h  stack.c  stack.h
src/string_additions/: string_additions.c  string_additions.h
